<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adress"
        android:padding="2pt"
        android:layout_gravity="center"
        android:textSize="8pt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metro"
        android:padding="2pt"
        android:layout_gravity="center"
        android:textSize="8pt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/going"
        android:padding="2pt"
        android:layout_gravity="center"
        android:textSize="8pt"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/map" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questions"
        android:padding="2pt"
        android:layout_gravity="center"
        android:textSize="8pt"/>
    <Button
        android:id="@+id/btn_gmap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/google_maps"
        android:onClick="onClick"
        android:textSize="10pt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telephone"
        android:padding="2pt"
        android:layout_gravity="center"
        android:textSize="8pt"/>
    <Button
        android:id="@+id/btn_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/_79150658064"
        android:onClick="onClick"
        android:textSize="10pt"/>








</LinearLayout>
