<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hall_"
        android:padding="3pt"
        android:layout_gravity="center"
        android:textSize="10pt"/>


    <Button
        android:id="@+id/btn_sea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/sea"
        android:onClick="onClick"
        android:textSize="10pt"/>
    <Button
        android:id="@+id/btn_work"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/work"
        android:onClick="onClick"
        android:textSize="10pt"/>

    <Button
        android:id="@+id/btn_party"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/party"
        android:onClick="onClick"
        android:textSize="10pt"/>




</LinearLayout>
