<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_person"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:text="@string/person"
        android:layout_marginStart="5dp">
    </TextView>
    <EditText
        android:id="@+id/ed_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:layout_marginLeft="5dp">
    </EditText>
    <TextView
        android:id="@+id/tv_date"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:text="@string/date">
    </TextView>
    <EditText
        android:id="@+id/ed_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:layout_marginLeft="5dp">
    </EditText>
    <TextView
        android:id="@+id/tv_time"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:text="@string/time">
    </TextView>
    <EditText
        android:id="@+id/ed_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:layout_marginLeft="5dp">
    </EditText>
    <TextView
        android:id="@+id/tv_hall"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:text="@string/hall">
    </TextView>
    <EditText
        android:id="@+id/ed_hall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:layout_marginLeft="5dp">
    </EditText>
    <Button
        android:id="@+id/btn_map"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:textSize="9pt"
        android:layout_height="match_parent"
        android:onClick="onClick"
        android:text="@string/map1" />
    <TextView
        android:id="@+id/tv_table"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:text="@string/table">
    </TextView>
    <EditText
        android:id="@+id/ed_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:layout_marginLeft="5dp">
    </EditText>
    <Button
        android:id="@+id/btn_booking"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:textSize="9pt"
        android:layout_height="match_parent"
        android:onClick="onClick"
        android:text="@string/book" />
</LinearLayout>
