<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="wrap_content">


<TextView
    android:id="@+id/tv_name"
    android:layout_marginLeft="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="8pt"
    android:text="@string/name">
</TextView>
<EditText
    android:id="@+id/ed_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="8pt"
    android:layout_marginLeft="5dp">
</EditText>

<TextView
    android:id="@+id/tv_login"
    android:layout_marginLeft="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="8pt"
    android:text="@string/login">
</TextView>
<EditText
    android:id="@+id/ed_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="8pt"
    android:layout_marginLeft="5dp">
</EditText>
    <TextView
        android:id="@+id/tv_pas"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:text="@string/pas">
    </TextView>
    <EditText
        android:id="@+id/ed_pas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:layout_marginLeft="5dp"
        android:inputType="textPassword">
    </EditText>
<Button
    android:id="@+id/btn_regnew"
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:textSize="9pt"
    android:layout_height="match_parent"
    android:onClick="onClick"
    android:text="@string/add_new" />


</LinearLayout>